// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AliasCommandLineAction prints the action parameter map 1`] = `
Object {
  "--flag": "true",
}
`;

exports[`AliasCommandLineAction prints the scoped action parameter map 1`] = `
Object {
  "--scope": "\\"foo\\"",
  "--scoped-foo": undefined,
  "--verbose": "false",
}
`;

exports[`AliasCommandLineAction prints the scoped action parameter map 2`] = `
Object {
  "--scope": "\\"foo\\"",
  "--scoped-foo": "\\"bar\\"",
  "--verbose": "false",
}
`;

exports[`AliasCommandLineAction prints the scoped action parameter map with provided default scoping arguments 1`] = `
Object {
  "--scope": "\\"foo\\"",
  "--scoped-foo": undefined,
  "--verbose": "false",
}
`;

exports[`AliasCommandLineAction prints the scoped action parameter map with provided default scoping arguments 2`] = `
Object {
  "--scope": "\\"foo\\"",
  "--scoped-foo": "\\"bar\\"",
  "--verbose": "false",
}
`;

exports[`AliasCommandLineAction prints the unscoped action parameter map 1`] = `
Object {
  "--scope": undefined,
  "--verbose": "true",
}
`;

exports[`AliasCommandLineAction prints the unscoped action parameter map with provided default arguments 1`] = `
Object {
  "--scope": undefined,
  "--verbose": "true",
}
`;

exports[`AliasCommandLineAction renders help text: action 1`] = `
"usage: example action [-h] [--flag]

a longer description

Optional arguments:
  -h, --help  Show this help message and exit.
  --flag      The flag
"
`;

exports[`AliasCommandLineAction renders help text: global help 1`] = `
"usage: example [-h] <command> ...

An example project

Positional arguments:
  <command>
    action       does the action
    scoped-action
                 does the scoped action

Optional arguments:
  -h, --help     Show this help message and exit.

[bold]For detailed help about a specific command, use: example <command> -h[normal]
"
`;

exports[`AliasCommandLineAction renders help text: scoped-action 1`] = `
"usage: example scoped-action [-h] [--verbose] [--scope SCOPE] ...

a longer description

Positional arguments:
  \\"...\\"          Scoped parameters. Must be prefixed with \\"--\\", ex. \\"-- 
                 --scopedParameter foo --scopedFlag\\". For more information on 
                 available scoped parameters, use \\"-- --help\\".

Optional arguments:
  -h, --help     Show this help message and exit.
  --verbose      A flag parameter.

Optional scoping arguments:
  --scope SCOPE  The scope
"
`;
